swagger implemented and routes
